fixed spacing issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -85,7 +85,7 @@
     &:not(:last-child) {
       margin-right: 0;
     }
-    margin-left: 20px;
+    margin-left: 5px;
   }
 
   amp-sidebar {
